--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,8 +20,10 @@ li{
     padding:30px 20px;
 }
     
-header img{
+.header-logo{
     float:left;
+    font-size:100px;
+    font-weight:bold;
 
 }
 
@@ -55,6 +57,6 @@ footer{
 
 
 footer p{
-    text-align:center;
+    float:right;
     font-size:20px;
 }
