--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,7 +48,7 @@ li{
 }
 
 .medium-wrapper{
-    background-color:beige;
+    background-color:white;
     padding: 180px 0 100px 0;
     height:500px;
 
