--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,6 +32,7 @@ li{
     float:left;
     width:50%;
     background-color: cornsilk;
+    padding:20px;
 }
 .top-wrapper{
     background-image:url(zekkei2.jpg);
