--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing:border-box;
+}
+
 body {
     font-family: "Avenir Next";
   }
@@ -6,6 +10,7 @@ header{
     background-color:aqua;
     color:black;
     height:80px;
+    width:100%;
     position:fixed;
     top:0;
 }
@@ -14,6 +19,11 @@ li{
     list-style:none;
     float:left;
     margin:15px 30px;
+}
+
+li:hover{
+    color:red;
+    cursor:pointer;
 }
     
 .header-list li{
@@ -33,8 +43,12 @@ li{
 .component{
     float:left;
     width:50%;
-    background-color: cornsilk;
     padding:20px;
+}
+
+.component p:hover{
+    color:blue;
+    cursor:pointer;
 }
 .top-wrapper{
     background-image:url(zekkei2.jpg);
