--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,11 +44,22 @@ li:hover{
     float:left;
     width:50%;
     padding:20px;
+    border: 3px solid black;
+}
+
+.component p{
+    display:inline;
+}
+
+.component img{
+    float:center;
+
 }
 
 .component p:hover{
     color:blue;
     cursor:pointer;
+    
 }
 .top-wrapper{
     background-image:url(zekkei2.jpg);
