--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,17 +44,20 @@ li:hover{
     float:left;
     width:50%;
     padding:20px;
-    border: 3px solid black;
+    height:150px;
+    position:relative;
+
 }
 
 .component p{
-    display:inline;
+    position:absolute;
+    top:100px;
+    width:80px;
+    display:inline-block;
+    
 }
 
-.component img{
-    float:center;
 
-}
 
 .component p:hover{
     color:blue;
