--- a/stylesheet.css
+++ b/stylesheet.css
@@ -72,7 +72,7 @@ li:hover{
     
 }
 .top-wrapper{
-    background-image:url(zekkei2.jpg);
+    background-image:url(image1.jpg);
     background-size:cover;
     font-size:35px;
     height:800px;
@@ -83,6 +83,11 @@ li:hover{
 .top-wrapper p {
     text-align:center;
     letter-spacing:5px;
+}
+
+.medium-heading{
+    font-size:15px;
+
 }
 
 .medium-wrapper{
