--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,22 +3,23 @@
 }
 
 body {
-    font-family: "Avenir Next";
+    font-family:"bangers",cursive;
 }
 
 header{
-    background-color:aqua;
+    background-color:white;
     color:black;
-    height:80px;
+    height:50px;
     width:100%;
     position:fixed;
     top:0;
+    
 }
 
 li{
     list-style:none;
     float:left;
-    margin:15px 30px;
+    margin:0 30px;
 }
 
 li:hover{
@@ -26,16 +27,19 @@ li:hover{
     cursor:pointer;
 }
     
-.header-list li{
+.header-list {
     font-size:15px;
-    float:left;
-    padding:30px 20px;
+    margin:15px 60px;
 }
     
 .header-logo{
     float:left;
-    font-size:100px;
+    font-size:30px;
     font-weight:bold;
+    margin-top:8px;
+    padding:5px 10px;
+    
+    
 
 }
 
@@ -74,15 +78,18 @@ li:hover{
 .top-wrapper{
     background-image:url(image1.jpg);
     background-size:cover;
-    font-size:35px;
+    font-size:50px;
     height:800px;
     padding: 180px 0 100px 0;
+    margin-top:50px;
+    
 
 }
 
 .top-wrapper p {
     text-align:center;
-    letter-spacing:5px;
+    letter-spacing:10px;
+    
 }
 
 .medium-heading{
@@ -91,9 +98,13 @@ li:hover{
 }
 
 .medium-wrapper{
-    padding: 180px 0 100px 0;
+    padding: 30px 0 30px 0;
     height:2000px;
 
+}
+
+.medium-heading h1{
+    font-size:50px;
 }
     
 footer{
